--- a/.github/workflows/main_bookwiseapp.yml
+++ b/.github/workflows/main_bookwiseapp.yml
@@ -27,7 +27,9 @@ jobs:
         run: npm run build
 
       - name: Test the app
-        run: npm run test
+        run: npm run test -- --verbose
+        env:
+          REACT_APP_API_URL: 'https://bookwiseapp-backend.azurewebsites.net'
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
