--- a/.github/workflows/main_bookwiseapp.yml
+++ b/.github/workflows/main_bookwiseapp.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build the app
         run: npm run build
+        env:
+          REACT_APP_API_URL: 'https://bookwiseapp-backend.azurewebsites.net'
 
       - name: Test the app
         run: npm run test -- --verbose
@@ -32,7 +34,7 @@ jobs:
           REACT_APP_API_URL: 'https://bookwiseapp-backend.azurewebsites.net'
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -72,3 +74,4 @@ jobs:
           app-name: 'bookwiseapp'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
+          slot-name: 'production'
