--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "jest": "^27.5.1"
+  },
+   "engines": {
+    "node": ">=20.0.0"
   }
 }
